WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
97476
GraphicsContext3D::compileShader is using incorrect string length in GraphicsContext3DOpenGLCommon.cpp
https://bugs.webkit.org/show_bug.cgi?id=97476
Summary
GraphicsContext3D::compileShader is using incorrect string length in Graphics...
Leo Yang
Reported
2012-09-24 12:39:34 PDT
int translatedShaderLength = translatedShaderSource.length(); ^ it is the length of String. But the following code is using it as the length of the CString of the String.
Attachments
Patch
(2.34 KB, patch)
2012-09-24 12:43 PDT
,
Leo Yang
dino
: commit-queue-
Details
Formatted Diff
Diff
Patch for land
(2.72 KB, patch)
2012-09-25 08:03 PDT
,
Leo Yang
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Leo Yang
Comment 1
2012-09-24 12:43:31 PDT
Created
attachment 165431
[details]
Patch
Dean Jackson
Comment 2
2012-09-24 17:58:38 PDT
Comment on
attachment 165431
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=165431&action=review
> Source/WebCore/ChangeLog:11 > + * platform/graphics/opengl/GraphicsContext3DOpenGLCommon.cpp: > + (WebCore::GraphicsContext3D::compileShader):
Since this is so easy to describe, it would be nice to explain what you did here.
Leo Yang
Comment 3
2012-09-25 08:03:56 PDT
Created
attachment 165614
[details]
Patch for land
WebKit Review Bot
Comment 4
2012-09-25 13:15:55 PDT
Comment on
attachment 165614
[details]
Patch for land Clearing flags on attachment: 165614 Committed
r129547
: <
http://trac.webkit.org/changeset/129547
>
Eric Seidel (no email)
Comment 5
2013-01-04 00:53:04 PST
Attachment 165431
[details]
was posted by a committer and has review+, assigning to Leo Yang for commit.
Leo Yang
Comment 6
2013-01-04 05:35:47 PST
Comment on
attachment 165431
[details]
Patch The patch has been landed.
Leo Yang
Comment 7
2013-01-04 05:36:37 PST
Close.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug