GraphicsContext3D::compileShader is using incorrect string length in GraphicsContext3DOpenGLCommon.cpp https://bugs.webkit.org/show_bug.cgi?id=97476

Reviewed by Dean Jackson.

No new tests because it's not testable in webkit test runner.

* platform/graphics/opengl/GraphicsContext3DOpenGLCommon.cpp:
(WebCore::GraphicsContext3D::compileShader):
Use translatedShaderCString.length() instead of translatedShaderSource.length()
for the shader source length because we are using translatedShaderCString.data()
for glShaderSource().


Canonical link: https://commits.webkit.org/115565@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@129547 268f45cc-cd09-0410-ab3c-d52691b4dbfc